load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

bool_flag( name = "always-link", build_setting_default = False )
bool_flag( name = "emit-cmt", build_setting_default = True )
bool_flag( name = "debug", build_setting_default = True )
bool_flag( name = "threads", build_setting_default = True )
bool_flag( name = "verbose", build_setting_default = False )
