load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

bool_flag( name = "always-link", build_setting_default = False )
config_setting(name = "enable_always_link", flag_values = {":always-link": str(True)})

bool_flag( name = "debug", build_setting_default = True )
config_setting(name = "enable_debug", flag_values = {":debug": str(True)})

bool_flag( name = "threads", build_setting_default = True )
config_setting(name = "enable_threads", flag_values = {":threads": str(True)})

bool_flag( name = "tooling", build_setting_default = False )
config_setting(name = "enable_tooling", flag_values = {":tooling": str(True)})

bool_flag( name = "verbose", build_setting_default = False )
config_setting(name = "enable_verbose", flag_values = {":verbose": str(True)})
