workspace( name = "ppx_version" )

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

#############
http_archive(
    name = "bazel_skylib",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
    ],
    sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
)
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

#############
http_archive(
    name = "obazl_rules_ocaml",
    strip_prefix = "rules_ocaml-06eaca64f51a198978a803532b9e0be1c52ff45d",
    urls = [
        "https://github.com/obazl/rules_ocaml/archive/06eaca64f51a198978a803532b9e0be1c52ff45d.tar.gz"
    ],
    sha256 = "45fdda94f8e66982ae7c0a43527c6254b31af32484bdc8a57a789bfd918e52b3"
)

load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
load("//:WORKSPACE.bzl", opam = "opam")
ocaml_configure(opam=opam, build = "mina-0.1.0")
