workspace( name = "ppx_version" )

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

#############
http_archive(
    name = "bazel_skylib",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
    ],
    sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
)
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

#############
http_archive(
    name = "obazl_rules_ocaml",
    strip_prefix = "rules_ocaml-b8ccb8eb0738f303b1a68b89d4af5998fa30c955",
    urls = [
        "https://github.com/obazl/rules_ocaml/archive/b8ccb8eb0738f303b1a68b89d4af5998fa30c955.tar.gz"
    ],
    sha256 = "168bd297208ad9050dbe913e6bc85c1ca4bdfcd3884a76c3b34c4bd970d4caba"

)

load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
load("//:WORKSPACE.bzl", opam = "opam")
ocaml_configure(opam=opam, build = "mina-0.1.0")
