opam-version: "2.0"
version: "0.1"
synopsis: ""
description:
  "OCaml extension point (ppx) meant to assure the stability of types and their Bin_prot serializations."
maintainer: "opensource@o1labs.org"
depends: [
  "ocaml" {<= "4.07.1"}
  "ppxlib"
  "ppx_bin_prot"
  "core_kernel" {< "v0.13"}
  "dune" {>= "2.5"}
]
build: ["dune" "build" "-p" name "-j" jobs]
