opam-version: "2.0"
name: "ppx_version"
authors: "opensource@o1labs.org"
homepage: "https://github.com/o1-labs/ppx_version"
bug-reports: "opensource@o1labs.org"
version: "0.1"
descr: """
Ocaml extension point (ppx) meant to assure the stability of types and their Bin_prot serializations

See the readme at https://github.com/o1-labs/ppx_version/README.md for more information.
"""
dev-repo: "git+https://github.com/o1-labs/ppx_version.git"
maintainer: "opensource@o1labs.org"
depends: [
  "ocaml" {<= "4.07.1"}
  "ppxlib"
  "ppx_bin_prot"
  "ppx_deriving_yojson"
  "ppx_sexp_conv"
  "core_kernel" {< "v0.13"}
  "dune" {>= "2.5"}
]
build: ["dune" "build" "-p" name "-j" jobs]
