## Dune file: /Users/gar/mina/ppx_version/src/dune

load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_ns_module",
    "ppx_archive",
    "ppx_executable",
    "ppx_module",
)

## Global Options
load(
    "//bzl:config.bzl",
    "GLOBAL_CLI_OPTS",
    "NS_MODULE_OPTS",
    "PPX_ARCHIVE_OPTS",
    "PPX_EXECUTABLE_OPTS",
    "PPX_MODULE_OPTS",
)

## Repo Options
load("//bzl/ppx_version:config.bzl", "PPX_VERSION_OPTS")

PKG_OPTS = GLOBAL_CLI_OPTS + PPX_VERSION_OPTS + []
LIB_1_OPTS = []
LIB_1_NS_MODULE_OPTS = PKG_OPTS + LIB_1_OPTS + NS_MODULE_OPTS
LIB_1_PPX_ARCHIVE_OPTS = PKG_OPTS + LIB_1_OPTS + PPX_ARCHIVE_OPTS
LIB_1_PPX_EXECUTABLE_OPTS = PKG_OPTS + LIB_1_OPTS + PPX_EXECUTABLE_OPTS
LIB_1_PPX_MODULE_OPTS = PKG_OPTS + LIB_1_OPTS + PPX_MODULE_OPTS

LIB_1_DEPS = [
    # do not sort (buildifier)
    "@opam//pkg:compiler-libs.common",
    "@opam//pkg:ppxlib",
    "@opam//pkg:ppx_bin_prot",  # lazy dep: bin_prot
    "@opam//pkg:core_kernel",
]

LAZY_DEPS = [
    # do not sort (buildifier)
    "@opam//pkg:bin_prot",
    "@ppx_version//src/runtime:ppx_version_runtime",
]

################################################################
## LIB 1
################################################################
ppx_archive(
    name = "ppx_version",
    opts = LIB_1_PPX_ARCHIVE_OPTS,
    visibility = ["//visibility:public"],
    deps = LIB_1_DEPS + [
        # do not sort (buildifier)
        ":Ppx_version_ns",
        ":Bin_io_unversioned",
        ":Dummy_derivers",
        ":Lint_version_syntax",
        ":Versioned_module",
        ":Versioned_type",
        ":Versioned_util",
    ],
)

ocaml_ns_module(
    name = "Ppx_version_ns",
    ns = "ppx_version",
    opts = LIB_1_NS_MODULE_OPTS,
    submodules = [
        # do not sort (buildifier)
        "bin_io_unversioned.ml",
        "dummy_derivers.ml",
        "lint_version_syntax.ml",
        "versioned_module.ml",
        "versioned_type.ml",
        "versioned_util.ml",
    ],
)

ppx_module(
    name = "Bin_io_unversioned",
    src = "bin_io_unversioned.ml",
    lazy_deps = LAZY_DEPS,
    ns_module = ":Ppx_version_ns",
    opts = LIB_1_PPX_MODULE_OPTS,
    ppx = ":ppxlib_metaquot",
    visibility = ["//visibility:public"],
    deps = LIB_1_DEPS + [
        # do not sort (buildifier)
        ":Versioned_util",
    ],
)

ppx_module(
    name = "Dummy_derivers",
    src = "dummy_derivers.ml",
    lazy_deps = [
        # do not sort (buildifier)
        "@ppx_version//src/runtime:ppx_version_runtime",
    ],
    ns_module = ":Ppx_version_ns",
    opts = LIB_1_PPX_MODULE_OPTS,
    ppx = ":ppxlib_metaquot",
    visibility = ["//visibility:public"],
    deps = LIB_1_DEPS + [
        # do not sort (buildifier)
    ],
)

ppx_module(
    name = "Lint_version_syntax",
    src = "lint_version_syntax.ml",
    lazy_deps = [
        # do not sort (buildifier)
        "@ppx_version//src/runtime:ppx_version_runtime",
    ],
    ns_module = ":Ppx_version_ns",
    opts = LIB_1_PPX_MODULE_OPTS,
    ppx = ":ppxlib_metaquot",
    visibility = ["//visibility:public"],
    deps = LIB_1_DEPS + [
        # do not sort (buildifier)
        ":Versioned_util",
    ],
)

ppx_module(
    name = "Versioned_module",
    src = "versioned_module.ml",
    lazy_deps = [
        # do not sort (buildifier)
        "@ppx_version//src/runtime:ppx_version_runtime",
    ],
    ns_module = ":Ppx_version_ns",
    opts = LIB_1_PPX_MODULE_OPTS,
    ppx = ":ppxlib_metaquot",
    visibility = ["//visibility:public"],
    deps = LIB_1_DEPS + [
        # do not sort (buildifier)
        ":Versioned_util",
    ],
)

ppx_module(
    name = "Versioned_type",
    src = "versioned_type.ml",
    lazy_deps = [
        # do not sort (buildifier)
        "@ppx_version//src/runtime:ppx_version_runtime",
    ],
    ns_module = ":Ppx_version_ns",
    opts = LIB_1_PPX_MODULE_OPTS,
    ppx = ":ppxlib_metaquot",
    visibility = ["//visibility:public"],
    deps = LIB_1_DEPS + [
        # do not sort (buildifier)
        ":Versioned_util",
    ],
)

ppx_module(
    name = "Versioned_util",
    src = "versioned_util.ml",
    lazy_deps = [
        # do not sort (buildifier)
        "@ppx_version//src/runtime:ppx_version_runtime",
    ],
    ns_module = ":Ppx_version_ns",
    opts = LIB_1_PPX_MODULE_OPTS,
    ppx = ":ppxlib_metaquot",
    visibility = ["//visibility:public"],
    deps = LIB_1_DEPS + [
        # do not sort (buildifier)
    ],
)

################################################################
ppx_executable(
    name = "ppxlib_metaquot",
    srcs = [
        # do not sort (buildifier)
        "@obazl//ppxlib:driver_standalone_runner",
    ],
    opts = select({
        "//bzl/config:enable_verbose": ["-verbose"],
        "//conditions:default": ["-thread"],
    }) + [
        "-linkall",
        "-predicates", "ppx_driver,ppx_deriver",
    ],
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppxlib.metaquot",
    ],
    visibility = ["//visibility:public"],
)

