load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ppx_archive",
    "ppx_module",
    "ppx_ns",
)

################################################################
## PPX STANZA 1: PPX_VERSION
################################################################
PPX_VERSION_PPX_MODULE_OPTS = []

PPX_VERSION_DEPS = [
    # do not sort (buildifier)
    "@opam//pkg:compiler-libs.common",
    "@opam//pkg:ppxlib",
    "@opam//pkg:ppx_bin_prot",
    "@opam//pkg:core_kernel",
]

PPX_VERSION_PPX = "//bzl/ppx:ppxlib.metaquot"

PPX_VERSION_PPX_ARGS = [
    # do not sort (buildifier)
]

############
ppx_archive(
    name = "ppx_version",
    opts = [],
    visibility = ["//visibility:public"],
    deps = PPX_VERSION_DEPS + [
        # do not sort (buildifier)
        ":Ppx_version_ns",
        ":Bin_io_unversioned",
        ":Dummy_derivers",
        ":Lint_version_syntax",
        ":Versioned_type",
        ":Versioned_module",
        ":Versioned_util",
    ],
)

#########
ppx_ns(
    name = "Ppx_version_ns",
    ns = "ppx_version",
    opts = [],
    submodules = [
        # do not sort (buildifier)
        "bin_io_unversioned.ml",
        "dummy_derivers.ml",
        "lint_version_syntax.ml",
        "versioned_module.ml",
        "versioned_type.ml",
        "versioned_util.ml",
    ],
)

###########
ppx_module(
    name = "Bin_io_unversioned",
    src = "bin_io_unversioned.ml",
    lazy_deps = [
        # do not sort (buildifier)
        "@ppx_version//src/runtime:ppx_version_runtime",
    ],
    ns = ":Ppx_version_ns",
    opts = PPX_VERSION_PPX_MODULE_OPTS,
    ppx = PPX_VERSION_PPX,
    ppx_args = PPX_VERSION_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:compiler-libs.common",
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppx_bin_prot",
        "@opam//pkg:core_kernel",
        "Versioned_util",
    ],
)

###########
ppx_module(
    name = "Dummy_derivers",
    src = "dummy_derivers.ml",
    lazy_deps = [
        # do not sort (buildifier)
        "@ppx_version//src/runtime:ppx_version_runtime",
    ],
    ns = ":Ppx_version_ns",
    opts = PPX_VERSION_PPX_MODULE_OPTS,
    ppx = PPX_VERSION_PPX,
    ppx_args = PPX_VERSION_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:compiler-libs.common",
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppx_bin_prot",
        "@opam//pkg:core_kernel",
    ],
)

###########
ppx_module(
    name = "Lint_version_syntax",
    src = "lint_version_syntax.ml",
    lazy_deps = [
        # do not sort (buildifier)
        "@ppx_version//src/runtime:ppx_version_runtime",
    ],
    ns = ":Ppx_version_ns",
    opts = PPX_VERSION_PPX_MODULE_OPTS,
    ppx = PPX_VERSION_PPX,
    ppx_args = PPX_VERSION_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:compiler-libs.common",
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppx_bin_prot",
        "@opam//pkg:core_kernel",
        "Versioned_util",
    ],
)

###########
ppx_module(
    name = "Versioned_module",
    src = "versioned_module.ml",
    lazy_deps = [
        # do not sort (buildifier)
        "@ppx_version//src/runtime:ppx_version_runtime",
    ],
    ns = ":Ppx_version_ns",
    opts = PPX_VERSION_PPX_MODULE_OPTS,
    ppx = PPX_VERSION_PPX,
    ppx_args = PPX_VERSION_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:compiler-libs.common",
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppx_bin_prot",
        "@opam//pkg:core_kernel",
        "Versioned_util",
    ],
)

###########
ppx_module(
    name = "Versioned_type",
    src = "versioned_type.ml",
    lazy_deps = [
        # do not sort (buildifier)
        "@ppx_version//src/runtime:ppx_version_runtime",
    ],
    ns = ":Ppx_version_ns",
    opts = PPX_VERSION_PPX_MODULE_OPTS,
    ppx = PPX_VERSION_PPX,
    ppx_args = PPX_VERSION_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:compiler-libs.common",
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppx_bin_prot",
        "@opam//pkg:core_kernel",
        "Versioned_util",
    ],
)

###########
ppx_module(
    name = "Versioned_util",
    src = "versioned_util.ml",
    lazy_deps = ["@ppx_version//src/runtime:ppx_version_runtime"],
    ns = ":Ppx_version_ns",
    opts = PPX_VERSION_PPX_MODULE_OPTS,
    ppx = PPX_VERSION_PPX,
    ppx_args = PPX_VERSION_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:compiler-libs.common",
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppx_bin_prot",
        "@opam//pkg:core_kernel",
    ],
)
